vedio card added

--- a/index.html
+++ b/index.html
@@ -24,5 +24,30 @@
         <img src="./pic.png" />
       </div>
     </div>
+    <div class="main2">
+      <h2 class="white"><span>"See What other people say about me"</span></h2>
+      <div class="video-content">
+        <iframe
+          width="393"
+          height="550"
+          src="https://www.youtube.com/embed/UPuk0Io-eHw"
+          title="How To Embed YouTube Shorts in WordPress | Embed YouTube Short Video #shorts #wordpress  #viral"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="393"
+          height="550"
+          src="https://www.youtube.com/embed/UPuk0Io-eHw"
+          title="How To Embed YouTube Shorts in WordPress | Embed YouTube Short Video #shorts #wordpress  #viral"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
   </body>
 </html>
