alomost complete practice

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <iframe
           width="450"
           height="300"
-          src="https://www.youtube.com/embed/nqUHTdYCwIs"
-          title="Last Words of Albert Einstein #shorts"
+          src="https://www.youtube.com/embed/DhRKPi4oQ0s?si=9x7K5Kk2MFOTJ1I1"
+          title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin"
@@ -66,8 +66,8 @@
         <iframe
           width="450"
           height="300"
-          src="https://www.youtube.com/embed/J1L1MzzYxpk"
-          title="Breaking news:- In 2025, Sun could destroy Earth. #shorts #space #nasa #science"
+          src="https://www.youtube.com/embed/AeNOBCoCs0U?si=SepEaG4faGnJUF_c"
+          title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin"
@@ -76,8 +76,103 @@
         <iframe
           width="450"
           height="300"
-          src="https://www.youtube.com/embed/VSJzviqMO7k"
-          title="Amazing Facts About Multinational Companies #shorts"
+          src="https://www.youtube.com/embed/SIdR-74AB0Q?si=2VB_f_vgzG7bzbVN"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="450"
+          height="300"
+          src="https://www.youtube.com/embed/QParsXMyN9g?si=owWKhu2LUUHIibho"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="450"
+          height="300"
+          src="https://www.youtube.com/embed/h4Ue98USW2U?si=6rYn8k5O8giX-orx"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="450"
+          height="300"
+          src="https://www.youtube.com/embed/l5tg504MT6k?si=djhKeAk-g48kGNkX"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+    <div class="main4">
+      <h4 class="white4">Short form Content</h4>
+      <div class="video-content3">
+        <iframe
+          width="340"
+          height="500"
+          src="https://www.youtube.com/embed/qr9M6zpKtiw"
+          title="10 secret tips of a topper in the class #shorts #study #studytips #viral"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="340"
+          height="500"
+          src="https://www.youtube.com/embed/_eu1V6IRkY0"
+          title="First Humans on Earth"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="340"
+          height="500"
+          src="https://www.youtube.com/embed/ba9rYxtMmPU"
+          title="Play Doh Was Invented By Mistake"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="340"
+          height="500"
+          src="https://www.youtube.com/embed/g1kJxDck-kI"
+          title="Why Most of the ICEBERG is underwater?"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="340"
+          height="500"
+          src="https://www.youtube.com/embed/hvcCnr1CSno"
+          title="Biggest LED Display Ever #zemtv #Zemtvshorts"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="340"
+          height="500"
+          src="https://www.youtube.com/embed/fcOBnrl9Ctg"
+          title="A Black Hole Which is 4 Million Times Bigger than Sun"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin"
