almost complete part 2

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </p>
       </div>
       <div class="sub_div_2">
-        <img src="./pic.png" />
+        <img src="./images/pic.gif" alt="gear" />
       </div>
     </div>
     <div class="main2">
@@ -179,6 +179,25 @@
           allowfullscreen
         ></iframe>
       </div>
+    </div>
+    <div class="main5">
+      <div class="section1">
+        <img src="images/pic5.gif" alt="gear" />
+      </div>
+      <div class="section2">
+        <div setting img>
+          <img
+            width="64"
+            height="64"
+            src="https://img.icons8.com/nolan/64/gear.png"
+            alt="gear"
+          />
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="section3"></div>
     </div>
   </body>
 </html>
