one website completed

--- a/index.html
+++ b/index.html
@@ -185,19 +185,55 @@
         <img src="images/pic5.gif" alt="gear" />
       </div>
       <div class="section2">
-        <div setting img>
+        <div class="setting img">
           <img
             width="64"
             height="64"
-            src="https://img.icons8.com/nolan/64/gear.png"
-            alt="gear"
+            src="https://img.icons8.com/3d-fluency/100/settings-2.png"
+            alt="settings-2"
           />
         </div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="write">
+          <h7 class="white5">Efficient Workflow</h7>
+        </div>
+        <div class="write2">
+          <h8 class="white6"> Reliable and</h8>
+        </div>
+        <div class="write3">
+          <h9 class="white7"> Timely Delivery</h9>
+        </div>
+        <div class="write4">
+          <p>
+            I understand the importance of deadlines and am committed to
+            delivering your video on time. With efficient workflow and clear
+            communication, you can trust me to bring your project to completion
+            on schedule.
+          </p>
+        </div>
       </div>
-      <div class="section3"></div>
+      <div class="section3">
+        <div class="Play store">
+          <img
+            width="64"
+            height="64"
+            src="https://img.icons8.com/3d-fluency/100/circled-play.png"
+            alt="circled-play"
+          />
+        </div>
+        <div class="write5">
+          <h10 class="white8"> Customized Video Editing </h10>
+        </div>
+        <div class="write6">
+          <h11 class="white9"> Tailored to Your Needs</h11>
+        </div>
+        <div class="write8">
+          <p class="white10">
+            I create unique videos that are customized to your specific needs
+            and preferences. From color grading to sound design, I pay attention
+            to every detail to ensure that your video is of the highest quality.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
