added something in 1 website

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </div>
     <div class="main5">
       <div class="section1">
-        <img src="images/pic5.gif" alt="gear" />
+        <img src="./images/3d cube box.gif" alt="gear" />
       </div>
       <div class="section2">
         <div class="setting img">
